--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -8,7 +8,7 @@
 	      <action android:name="android.intent.action.VIEW" />
 	      <category android:name="android.intent.category.DEFAULT" />
 	      <category android:name="android.intent.category.BROWSABLE" />
-	      <data android:scheme="zumoe2etestapp" android:host="easyauth.callback" />
+	      <data android:scheme="url_scheme_of_your_app" android:host="easyauth.callback" />
 	    </intent-filter>
 	  </activity>
 	</application>
