--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -66,7 +66,7 @@
 			<string>com.xamarin.sample.dihei_empty_node</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>zumoe2etestapp</string>
+				<string>url_scheme_of_your_app</string>
 			</array>
 		</dict>
 	</array>
