--- a/iOS/project.json
+++ b/iOS/project.json
@@ -1,8 +1,5 @@
-{
-  "dependencies": {
-    "Microsoft.Azure.Mobile.Client": "4.0.0",
-    "Xamarin.Forms": "2.3.4.247"
-  },
+﻿{
+  "dependencies": {},
   "frameworks": {
     "Xamarin.iOS,Version=v1.0": {}
   },
